--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.android.support:recyclerview-v7:23.2.1'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.google.android.gms:play-services-ads:8.4.0'
-
-
-
 }
+
+apply plugin: 'com.google.gms.google-services'
