--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,13 +7,6 @@
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <!-- GCM notification access -->
-
-    <!--
-    <permission android:name="cl.sidan.clac.permission.C2D_MESSAGE"
-        android:protectionLevel="signature" />
-    <uses-permission android:name="cl.sidan.clac.permission.C2D_MESSAGE" />
-    -->
-
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-permission android:name="com.google.android.c2dm.intent.REGISTRATION" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -23,7 +16,7 @@
         android:icon="@drawable/nopo"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat">
+        android:theme="@style/DefaultTheme">
         <activity
             android:name=".LoginActivity"
             android:label="@string/title_activity_login">
@@ -35,17 +28,16 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/DefaultTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
         <service
             android:name="cl.sidan.clac.other.GCMListenerService"
-            android:exported="false" >
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
@@ -84,7 +76,7 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/DefaultTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cl.sidan.clac.MainActivity" />
